--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class="header__logo" src="/russian-travel/images/__logo.png">
+      <img class="header__logo" src="/russian-travel/images/__logo.png" alt="символ из России">
       <ul class="header__lang-links">
         <li class="header__list-item">
           <a class="header__lang-link" href="#">Ru</a>
@@ -26,7 +26,7 @@
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <h3 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
-        <img class="lead__image" src="images/__imagegroup4.png">
+        <img class="lead__image" src="images/__imagegroup4.png" alt="женщина в поезде">
         <p class="lead__caption">ваша полка — верхняя</p>
       </section>
       <section class="intro">
