--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
           <h3 class="place__title">Куршская коса</h3>
           <img src="/russian-travel/images/__image.png" alt="фото кушской косы" class="place__image">
           <div class="place__website">
-            <p class="website__url-heading">URL</p>
-            <a href="http://park-kosa.ru" class="website__link">park-kosa.ru</a>
+            <p class="place__website-heading">URL</p>
+            <a href="http://park-kosa.ru" class="place__website-link">park-kosa.ru</a>
           </div>
           <div class="place__paragraph-container">
             <p class="place__paragraph">
@@ -87,8 +87,8 @@
           <h3 class="place__title">Кольский</h3>
           <img src="/russian-travel/images/__image2.png" alt="горы в снегу" class="place__image">
           <div class="place__website">
-            <p class="website__url-heading">URL</p>
-            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="website__link">National Geographic</a>
+            <p class="place__website-heading">URL</p>
+            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__website-link">National Geographic</a>
           </div>
           <div class="place__paragraph-container">
             <p class="place__paragraph">
@@ -103,8 +103,8 @@
           <h3 class="place__title">Алтай</h3>
           <img src="/russian-travel/images/__image3.png" alt="ноутбук на фоне леса" class="place__image">
           <div class="place__website">
-            <p class="website__url-heading">URL</p>
-            <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="website__link">Facebook</a>
+            <p class="place__website-heading">URL</p>
+            <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__website-link">Facebook</a>
           </div>
           <div class="place__paragraph-container">
             <p class="place__paragraph">
@@ -119,8 +119,8 @@
           <h3 class="place__title">Зимний Байкал</h3>
           <img src="/russian-travel/images/__image4.png" alt="потрескавшийся лёд" class="place__image">
           <div class="place__website">
-            <p class="website__url-heading">URL</p>
-            <a href="https://vk.com/baikalmile" class="website__link">https://vk.com/baikalmile</a>
+            <p class="place__website-heading">URL</p>
+            <a href="https://vk.com/baikalmile" class="place__website-link">https://vk.com/baikalmile</a>
           </div>
           <div class="place__paragraph-container">
             <p class="place__paragraph">
@@ -134,8 +134,8 @@
         <div class="place">
           <h3 class="place__title">Карелия</h3>
           <div class="place__website">
-            <p class="website__url-heading">URL</p>
-            <a href="http://vodlozero.ru" class="website__link">http://vodlozero.ru/</a>
+            <p class="place__website-heading">URL</p>
+            <a href="http://vodlozero.ru" class="place__website-link">http://vodlozero.ru/</a>
           </div>
           <img src="/russian-travel/images/__image5.png" alt="река на фоне леса" class="place__image">
           <div class="place__paragraph-container">
