--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Travel</title>
-  <link rel="stylesheet" href="/russian-travel/pages/index.css">
+  <link rel="stylesheet" href="pages/index.css">
   <meta name="description" content="проект русские путешествия">
   <meta name="keywords" content="html, css">
   <meta name="author" content="Andrei Kovzik">
@@ -12,7 +12,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class="header__logo" src="/russian-travel/images/__logo.png" alt="символ из России">
+      <img class="header__logo" src="images/__logo.png" alt="символ из России">
       <ul class="header__lang-links">
         <li class="header__list-item">
           <a class="header__lang-link" href="#">Ru</a>
@@ -53,23 +53,23 @@
         </ul>
       </section>
       <section class="photo-grid">
-        <img src="/russian-travel/images/__item.png" alt="природа из поезда" class="photo-grid__item">
-        <img src="/russian-travel/images/__item2.png" alt="горы вид сверху" class="photo-grid__item">
-        <img src="/russian-travel/images/__item3.png" alt="собака на тюке сена" class="photo-grid__item">
-        <img src="/russian-travel/images/__item4.png" alt="лес в тумане" class="photo-grid__item">
-        <img src="/russian-travel/images/__item5.png" alt="авто на льду" class="photo-grid__item">
-        <img src="/russian-travel/images/__item6.png" alt="пляж" class="photo-grid__item">
-        <img src="/russian-travel/images/__item7.png" alt="горы в анфас" class="photo-grid__item">
-        <img src="/russian-travel/images/__item8.png" alt="знак пешеходный переход" class="photo-grid__item">
-        <img src="/russian-travel/images/__item9.png" alt="горы камчатки" class="photo-grid__item">
-        <img src="/russian-travel/images/__item10.png" alt="горы и лес камчатки" class="photo-grid__item">
-        <img src="/russian-travel/images/__item11.png" alt="вид на байкал" class="photo-grid__item">
-        <img src="/russian-travel/images/__item12.png" alt="горы в тумане" class="photo-grid__item">
+        <img src="images/__item.png" alt="природа из поезда" class="photo-grid__item">
+        <img src="images/__item2.png" alt="горы вид сверху" class="photo-grid__item">
+        <img src="images/__item3.png" alt="собака на тюке сена" class="photo-grid__item">
+        <img src="images/__item4.png" alt="лес в тумане" class="photo-grid__item">
+        <img src="images/__item5.png" alt="авто на льду" class="photo-grid__item">
+        <img src="images/__item6.png" alt="пляж" class="photo-grid__item">
+        <img src="images/__item7.png" alt="горы в анфас" class="photo-grid__item">
+        <img src="images/__item8.png" alt="знак пешеходный переход" class="photo-grid__item">
+        <img src="images/__item9.png" alt="горы камчатки" class="photo-grid__item">
+        <img src="images/__item10.png" alt="горы и лес камчатки" class="photo-grid__item">
+        <img src="images/__item11.png" alt="вид на байкал" class="photo-grid__item">
+        <img src="images/__item12.png" alt="горы в тумане" class="photo-grid__item">
       </section>
       <section class="places">
         <div class="place">
           <h3 class="place__title">Куршская коса</h3>
-          <img src="/russian-travel/images/__image.png" alt="фото кушской косы" class="place__image">
+          <img src="images/__image.png" alt="фото кушской косы" class="place__image">
           <div class="place__website">
             <p class="place__website-heading">URL</p>
             <a href="http://park-kosa.ru" class="place__website-link">park-kosa.ru</a>
@@ -85,7 +85,7 @@
         </div>
         <div class="place">
           <h3 class="place__title">Кольский</h3>
-          <img src="/russian-travel/images/__image2.png" alt="горы в снегу" class="place__image">
+          <img src="images/__image2.png" alt="горы в снегу" class="place__image">
           <div class="place__website">
             <p class="place__website-heading">URL</p>
             <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__website-link">National Geographic</a>
@@ -101,7 +101,7 @@
         </div>
         <div class="place">
           <h3 class="place__title">Алтай</h3>
-          <img src="/russian-travel/images/__image3.png" alt="ноутбук на фоне леса" class="place__image">
+          <img src="images/__image3.png" alt="ноутбук на фоне леса" class="place__image">
           <div class="place__website">
             <p class="place__website-heading">URL</p>
             <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__website-link">Facebook</a>
@@ -117,7 +117,7 @@
         </div>
         <div class="place">
           <h3 class="place__title">Зимний Байкал</h3>
-          <img src="/russian-travel/images/__image4.png" alt="потрескавшийся лёд" class="place__image">
+          <img src="images/__image4.png" alt="потрескавшийся лёд" class="place__image">
           <div class="place__website">
             <p class="place__website-heading">URL</p>
             <a href="https://vk.com/baikalmile" class="place__website-link">https://vk.com/baikalmile</a>
@@ -137,7 +137,7 @@
             <p class="place__website-heading">URL</p>
             <a href="http://vodlozero.ru" class="place__website-link">http://vodlozero.ru/</a>
           </div>
-          <img src="/russian-travel/images/__image5.png" alt="река на фоне леса" class="place__image">
+          <img src="images/__image5.png" alt="река на фоне леса" class="place__image">
           <div class="place__paragraph-container">
             <p class="place__paragraph">
               Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
