--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <img class="header__logo" src="./images/__logo.png" alt="символ из России">
       <ul class="header__lang-links">
         <li class="header__list-item">
-          <a class="header__lang-link" href="#">Ru</a>
+          <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
         </li>
         <li class="header__list-item">
           <a class="header__lang-link" href="#">En</a>
@@ -24,13 +24,13 @@
     </header>
     <main class="content">
       <section class="lead">
-        <h1 class="lead__title">Путешествия по России</h1>
-        <h3 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
+        <h1 class="lead__title">Путешествия по&nbsp;России</h1>
+        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <img class="lead__image" src="./images/__imagegroup4.png" alt="женщина в поезде">
         <p class="lead__caption">ваша полка — верхняя</p>
       </section>
       <section class="intro">
-        <h2 class="intro__title">Чего мы там не видели?</h2>
+        <h2 class="intro__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
           <li class="intro__list-item">
@@ -68,11 +68,11 @@
       </section>
       <section class="places">
         <div class="place">
-          <h3 class="place__title">Куршская коса</h3>
+          <h2 class="place__title">Куршская коса</h2>
           <img src="./images/__image.png" alt="фото кушской косы" class="place__image">
           <div class="place__website">
-            <p class="place__website-heading">URL</p>
-            <a href="http://park-kosa.ru" class="place__website-link">park-kosa.ru</a>
+            <p class="place__website-heading">url</p>
+            <a href="http://park-kosa.ru" target="blank" class="place__website-link">park-kosa.ru</a>
           </div>
           <div class="place__paragraph-container">
             <p class="place__paragraph">
@@ -84,11 +84,11 @@
           </div>
         </div>
         <div class="place">
-          <h3 class="place__title">Кольский</h3>
+          <h2 class="place__title">Кольский</h2>
           <img src="./images/__image2.png" alt="горы в снегу" class="place__image">
           <div class="place__website">
-            <p class="place__website-heading">URL</p>
-            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__website-link">National Geographic</a>
+            <p class="place__website-heading">url</p>
+            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="blank" class="place__website-link">National Geographic</a>
           </div>
           <div class="place__paragraph-container">
             <p class="place__paragraph">
@@ -100,11 +100,11 @@
           </div>
         </div>
         <div class="place">
-          <h3 class="place__title">Алтай</h3>
+          <h2 class="place__title">Алтай</h2>
           <img src="./images/__image3.png" alt="ноутбук на фоне леса" class="place__image">
           <div class="place__website">
-            <p class="place__website-heading">URL</p>
-            <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__website-link">Facebook</a>
+            <p class="place__website-heading">url</p>
+            <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="blank" class="place__website-link">Facebook</a>
           </div>
           <div class="place__paragraph-container">
             <p class="place__paragraph">
@@ -116,11 +116,11 @@
           </div>
         </div>
         <div class="place">
-          <h3 class="place__title">Зимний Байкал</h3>
+          <h2 class="place__title">Зимний Байкал</h2>
           <img src="./images/__image4.png" alt="потрескавшийся лёд" class="place__image">
           <div class="place__website">
-            <p class="place__website-heading">URL</p>
-            <a href="https://vk.com/baikalmile" class="place__website-link">https://vk.com/baikalmile</a>
+            <p class="place__website-heading">url</p>
+            <a href="https://vk.com/baikalmile" target="blank" class="place__website-link">https://vk.com/baikalmile</a>
           </div>
           <div class="place__paragraph-container">
             <p class="place__paragraph">
@@ -132,10 +132,10 @@
           </div>
         </div>
         <div class="place">
-          <h3 class="place__title">Карелия</h3>
+          <h2 class="place__title">Карелия</h2>
           <div class="place__website">
-            <p class="place__website-heading">URL</p>
-            <a href="http://vodlozero.ru" class="place__website-link">http://vodlozero.ru/</a>
+            <p class="place__website-heading">url</p>
+            <a href="http://vodlozero.ru" target="blank" class="place__website-link">http://vodlozero.ru/</a>
           </div>
           <img src="./images/__image5.png" alt="река на фоне леса" class="place__image">
           <div class="place__paragraph-container">
@@ -146,33 +146,35 @@
         </div>
       </section>
       <section class="cover">
-        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
-          <h2 class="cover__title">До Байкала «на собаках»</h2>
-          <h4 class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</h4>
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="blank" class="cover__link">
+          <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
         </a>
       </section>
     </main>
     <footer class="footer">
-      <ul class="footer__links">
-        <li class="footer__list-item">
-          <a href="https://yandex.ru/maps" target="_blank" title="Яндекс.Карты" class="link footer__link">Карты</a>
-        </li>
-        <li class="footer__list-item">
-          <a href="https://yandex.ru/pogoda" target="_blank" title="Яндекс.Погода" class="footer__link">Погода</a>
-        </li>
-        <li class="footer__list-item">
-          <a href="https://rasp.yandex.ru" target="_blank" title="Яндекс.Расписание"
-            class="footer__link">Расписание</a>
-        </li>
-        <li class="footer__list-item">
-          <a href="https://calendar.yandex.ru" target="_blank" title="Яндекс.Календарь"
-            class="footer__link">Календарь</a>
-        </li>
-        <li class="footer__list-item">
-          <a href="https://travel.yandex.ru" target="_blank" title="Яндекс.Путешествия"
-            class="footer__link">Путешествия</a>
-        </li>
-      </ul>
+      <nav class="footer__navigation">
+        <ul class="footer__links">
+          <li class="footer__list-item">
+            <a href="https://yandex.ru/maps" target="_blank" title="Яндекс.Карты" class="link footer__link">Карты</a>
+          </li>
+          <li class="footer__list-item">
+            <a href="https://yandex.ru/pogoda" target="_blank" title="Яндекс.Погода" class="footer__link">Погода</a>
+          </li>
+          <li class="footer__list-item">
+            <a href="https://rasp.yandex.ru" target="_blank" title="Яндекс.Расписание"
+              class="footer__link">Расписание</a>
+          </li>
+          <li class="footer__list-item">
+            <a href="https://calendar.yandex.ru" target="_blank" title="Яндекс.Календарь"
+              class="footer__link">Календарь</a>
+          </li>
+          <li class="footer__list-item">
+            <a href="https://travel.yandex.ru" target="_blank" title="Яндекс.Путешествия"
+              class="footer__link">Путешествия</a>
+          </li>
+        </ul>
+      </nav>
       <p class="footer__copyright">© 2020. Ковзик Андрей</p>
     </footer>
   </div>
